--- a/index.html
+++ b/index.html
@@ -28,14 +28,33 @@
     </div>
     <div class="content">
         <div class="body">
-            <h2> Where can you find it?</h2>
+            <h2> Where can you do with it?</h2>
             <ul class="slideshow">
                 <li>
                     <div class="card">
-                        <img src="">
-                        <div class="img-description"></div>
+                        <img src="./sources/drink.jpeg" alt="">
+                        <div class="img-description">Drink it.</div>
                     </div>
                 </li>
+                <li>
+                    <div class="card">
+                        <img class="rect-img" src="./sources/shower.jpeg" alt="">
+                        <div class="img-description">Clean yourself.</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <img class="rect-img" src="./sources/swim.jpeg" alt="">
+                        <div class="img-description">Swim.</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <img class="rect-img" src="./sources/drowning.jpeg" alt="">
+                        <div class="img-description">Not swim.</div>
+                    </div>
+                </li>
+
             </ul>
         </div>
         <div class="banner">
@@ -43,7 +62,7 @@
         </div>
         <div class="bottom">
             <div class="recruit">
-                <div>Do you want to live a healthier life</div>
+                <div>By the way, water should be a human right, easily accessible to everyone. <a href="https://www.cdc.gov/healthywater/global/wash_statistics.html">Currently</a>, 2 billion people lack access to safely managed drinking water at home. </div>
                 <button class="sign-up">Drink up</button>
             </div>
         </div>
