Fullscreen, aligment etc..

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>Ever stopped to apreciate water? You know, H<sub>2</sub>O, the substance we keep searching for on other planets, because we think its the most basic need for life?</p>
                 <button class="sign-up">Drink up</button>
             </div>
-            <img src="">
+            <img src="./sources/bluemarble.webp" alt="blue marble">
         </div>
     </div>
     <div class="content">
