--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
             </ul>
         </div>
         <div class="banner">
-            <div class="quote">Without water, I'd probaby die.</div>
+            <div class="subbanner">
+                <div class="quote">"Without water, I'd probaby die."</div>
+                <div class="quotee">-some smart dude</div>
+            </div>
         </div>
         <div class="bottom">
             <div class="recruit">
