Added logo, background, cleanup on other stuff.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
         <div class="top-links">
-            <img class="logo" src="" alt="in">
+            <img class="logo" src="./sources/logo.png" alt="in">
             <ul class="links">
                 <li>Link one</li>
                 <li>Link two</li>
@@ -28,7 +28,7 @@
     </div>
     <div class="content">
         <div class="body">
-            <h2> Where can you do with it?</h2>
+            <div class="h2-container"><h2>What can you do with it?</h2></div>
             <ul class="slideshow">
                 <li>
                     <div class="card">
@@ -65,8 +65,8 @@
         </div>
         <div class="bottom">
             <div class="recruit">
-                <div>By the way, water should be a human right, easily accessible to everyone. <a href="https://www.cdc.gov/healthywater/global/wash_statistics.html">Currently</a>, 2 billion people lack access to safely managed drinking water at home. </div>
-                <button class="sign-up">Drink up</button>
+                <div>By the way, water should be a human right, easily accessible to everyone. <a href="https://www.cdc.gov/healthywater/global/wash_statistics.html">Currently</a>, 2 billion people lack access to safely managed drinking water at home. There are plenty of organizations trying to ameliorate this issue, you can check out one of them by clicking this button.</div>
+                <button class="sign-up"><a href="https://water.org/">Find out more</a></button>
             </div>
         </div>
     </div>
